--- a/css/main.css
+++ b/css/main.css
@@ -697,6 +697,7 @@ dl.container {
 #map {
   width:100%;
   height:25em;
+  background: url(../img/location-map.png) no-repeat center;
 }
 
 /* Consistent footer across pages */
@@ -719,6 +720,11 @@ footer p {
 .homepage-content {
   text-align:center;
   background-color:#0DB3BC;
+  background: url(../img/tshirt-models-header.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   padding:10em 2em 2em 2em;
   margin:-10em -2em 0 -2em;
 }
@@ -736,12 +742,12 @@ footer p {
 .homepage-content .button.submit, .homepage-content .button.submit {
   border-color:#FFF;
   color:#FFF;
-  background-color:#0DB3BC;
+  background-color:rgba(0, 0, 0, 0);
 }
 
 .homepage-content .button.submit:hover, .homepage-content .button.submit:focus {
   background-color:#FFF;
-  color:#0DB3BC;
+  color:#EFA867;
 }
 
 /* Image and title classes for team profiles */
