add jquery and imageSwitch to help with image switch on window resizing

--- a/css/main.css
+++ b/css/main.css
@@ -310,6 +310,14 @@ span.listitem { /* Since both lists employ color attributes to change bullet/num
   color:#777;
 }
 
+.hidden {
+  visibility: hidden;
+}
+
+.shown {
+  visibility: visible;
+}
+
 /* 
   COMBINED ELEMENTS -------------------
 */
