Modified some minor content - made the reviews different on each page, changed "company updates" to "recent updates", and adjusted the subheader on the front page to be shorter

--- a/css/main.css
+++ b/css/main.css
@@ -711,7 +711,7 @@ dl.container {
 /* For the countdown */
 #countdown p {
   display:inline-block;
-  padding:0.5rem;
+  padding:0 0.5rem;
   background:#0DB3BC;
   color:#FFF;
   font-size:1.5rem;
