--- a/css/main.css
+++ b/css/main.css
@@ -503,10 +503,11 @@ a.nav-toggle.shown {
 
 a.nav-toggle {
   display:block;
-  text-align: right;
+  text-align:right;
   padding-right:1em;
   padding-top:1.5em;
   font-weight:bold;
+  z-index:-1;
 }
 
 @media (min-width:56.25em) {
