--- a/css/main.css
+++ b/css/main.css
@@ -17,28 +17,6 @@ body { /* Setting up the main body, and its padding from the inside contents*/
   padding:20em 2em 2em 2em; /* Top padding gets reduced if the menu is collapsed */
 }
 
-@media (max-width:42.5em) {
-  body.mobile-shown {
-    padding:20em 2em 2em 2em; /* Top padding gets reduced if the menu is collapsed */
-  }
-
-  body.mobile-hidden {
-    padding:8em 2em 2em 2em; /* Top padding gets reduced if the menu is collapsed */
-  }
-}
-
-@media (min-width:42.51em) {
-  body {
-    padding:12em 2em 2em 2em; /* Top padding gets reduced as the screen size increases */
-  }
-}
-
-@media (min-width:56.25em) {
-  body {
-    padding:8em 2em 2em 2em; /* Top padding gets reduced as the screen size increases */
-  }
-}
-
 div.wrapper { /* The DIV wrapper for the entire page */
   max-width:80em;
   margin:0 auto;
@@ -153,20 +131,6 @@ a:hover, a:focus {
   color:#EFA867;
 }
 
-@media (max-width:34.999em) { /* When the screen is small, have the buttons span the entire screen width and center the text */
-  .submit, .reset, .edit, .delete, .more-info {
-    width:100%;
-  }
-
-  .submit, .edit, .more-info {
-    margin-bottom:0.5em;
-  }
-
-  .submit, .reset, .edit, .delete, .more-info {
-    text-align:center;
-  }
-}
-
 .submit, .edit, .more-info { /* Submit button for forms */
   color:#EFA867;
   border-style:solid;
@@ -219,12 +183,6 @@ textarea { /* Ensure that the textarea is big enough and that it doesn't somehow
   min-height:10em;
 }
 
-@media (min-width:35em) { /* When the screen gets larger, restrict the width of the fields */
-  .textfield-label, .textfield {
-    max-width:25em;
-  }
-}
-
 /* 
   TEXT ELEMENTS -------------------
 */
@@ -238,35 +196,11 @@ h1 {
   margin:0;
 }
 
-@media (min-width:30em) { /* Heading 1 size changes with screen size */
-  h1 {
-    font-size: 2.5rem;
-  }
-}
-
-@media (min-width:56.25em) { /* Heading 1 size changes with screen size */
-  h1 {
-    font-size: 3rem;
-  }
-}
-
 p.author { /* For the subheading (with author names) on each page */
   color:#777;
   font-size:1rem;
   font-family: 'Montserrat', Arial, Verdana, serif;
   margin:0 0 1rem 0;
-}
-
-@media (min-width:30em) { /* Subheading size changes with screen size */
-  p.author {
-    font-size: 1.25rem;
-  }
-}
-
-@media (min-width:56.25em) { /* Subheading size changes with screen size */
-  p.author {
-    font-size: 1.5rem;
-  }
 }
 
 section h2 { /* Specifically for the <h2> tag as the rendered element */
@@ -426,36 +360,6 @@ p.product-price, p.product-date { /* The paragraph that holds the product's pric
   padding-bottom:2em;
 }
 
-@media (min-width:50em) {
-  .grid-container { /* Regular grids used for layout grids (flexbox reserved for other kinds of scaling info) */
-    margin-left:-1em;
-    margin-right:-1em;
-  }
-
-  .col-1of3 {
-    width:33.33%; /* At a certain screen size, make the columns 33% and 66% */
-  }
-
-  .col-2of3 {
-    width:66.66%;
-  }
-
-  .col-1of2 {
-    width:50%;
-  }
-
-  [class*='col-'] { /* Remove outside margins */
-    padding:0 1em;
-    float:left;
-  }
-
-  .more-below-small {
-    border-bottom: 0;
-    margin-bottom: 0;
-    padding-bottom: 0;
-  }
-}
-
 /* 
   CITATIONS -------------------
 */
@@ -520,13 +424,6 @@ a.nav-toggle {
   z-index:-1;
 }
 
-@media (min-width:56.25em) {
-  nav.fixed-nav-bar {
-    position:fixed; /* When the screen is big enough, lock the navbar to the top of the window */
-    height:4em;
-  }
-}
-
 .img-navbar { /* When the screen is small, have the logo centered and above the navigation */
   display:block;
   margin:0 auto;
@@ -544,49 +441,15 @@ a.nav-toggle {
   transition: all 0.3s ease-out;
 }
 
-@media (min-width:56.25em) { /* With a larger screen, have the logo off to the left and float the navigation to the right */
-  .img-navbar {
-    max-height:100%;
-    padding:1em 0 1em 2em;
-    display:inline-block;
-    float:left;
-  }
-}
-
 nav ul { /* Align the navigation items to the center when the screen is small */
   width:100%;
   padding-right:2em;
   text-align:center;
 }
 
-@media (min-width:56.25em) { /* Send the navigation to the right when the screen increases in size */
-  nav ul {
-    display:block;
-    text-align:right;
-  }
-}
-
 nav ul li {
   list-style-type:none;
   display:inline-block; /* Navigation items are side-by-side with a larger screen size */
-}
-
-@media (max-width:42.5em) {
-  nav ul li {
-    width:100%; /* With a smaller screen size, navigation items are stacked on top of each other */
-    padding:0.5em 0;
-    border-bottom:0.1em solid #CCC;
-  }
-
-  nav ul li:last-of-type {
-    border-bottom-style:none;
-    padding:0.5em 0 0 0;
-  }
-
-  .img-navbar {
-    margin-left:1em;
-    float:left;
-  }
 }
 
 /* Styling for the Flexbox grid elements */
@@ -618,14 +481,6 @@ nav ul li {
   background-color:none;
 }
 
-@media (min-width:35em) { /* Cart item image appears much smaller and off to the left when the screen is larger */
-  .img-cart-view{
-    width:10em;
-    height:auto;
-    float:left;
-  }
-}
-
 .cart-item-box {
   width:100%;
   display:inline-block;
@@ -642,12 +497,6 @@ nav ul li {
 
 .total {
   color:#0DB3BC;
-}
-
-@media (min-width:35em) { /* Cart item image appears much smaller and off to the left when the screen is larger */
-  .subtotal-checkout{
-    text-align:right;
-  }
 }
 
 /* Description list that contains product info */
@@ -684,27 +533,12 @@ dl.container {
   align-items:center;
 }
 
-@media (min-width:35em) {
-  dl.container {
-    margin:0;
-  }
-}
-
 /*Product View Item on the Current Styles and Discontinued Styles pages*/
 
 .img-product-view {
   max-width:100%;
   display:block;
   margin:0 auto;
-}
-
-@media (min-width:45.625em) { /* Product view item image appears smaller and off to the left when the screen is larger */
-  .img-product-view {
-    width:30%;
-    float:left;
-    margin-right:2em;
-    height:auto;
-  }
 }
 
 .product-view p {
@@ -788,12 +622,6 @@ footer p {
   margin:-10em -2em 0 -2em;
 }
 
-@media (min-width:42.51em) { /* Increase the padding if the screen is larger */
-  .homepage-content {
-    padding:15em 2em 10em 2em;
-  }
-}
-
 .homepage-content h1, .homepage-content p { /* Change the text to white so that it shows up above the header image */
   color:#FFF;
 }
@@ -833,4 +661,168 @@ article h3 { /* The name of the reviewer */
 .updates-date { /* Styling for the dates in each update post on the company update page */
   font-weight:bold;
   margin-top:-1.5em;
+}
+
+
+
+/*
+  MEDIA QUERIES ----------------------
+*/
+
+@media (min-width:30em) { /* Media queries which take place once the screen is 30em or larger */
+
+  h1 { /* H1 size changes with screen size */
+    font-size: 2.5rem;
+  }
+ 
+  p.author { /* Subheading size changes with screen size */
+    font-size: 1.25rem;
+  }
+}
+
+@media (max-width:34.999em) { /* Media queries which take place until the screen is 35em or larger */
+
+  .submit, .reset, .edit, .delete, .more-info { /* When the screen is small, have the buttons span the entire screen width and center the text */
+    width:100%;
+  }
+
+  .submit, .edit, .more-info {
+    margin-bottom:0.5em;
+  }
+
+  .submit, .reset, .edit, .delete, .more-info {
+    text-align:center;
+  }
+}
+
+@media (min-width:35em) {  /* Media queries which take place once the screen is 35em or larger */
+
+  .textfield-label, .textfield { /* When the screen gets larger, restrict the width of the fields */
+    max-width:25em;
+  }
+
+  .img-cart-view { /* Cart item image appears much smaller and off to the left when the screen is larger */
+    width:10em;
+    height:auto;
+    float:left;
+  }
+
+  .subtotal-checkout { /* Cart item image appears much smaller and off to the left when the screen is larger */
+    text-align:right;
+  }
+
+  dl.container {
+    margin:0;
+  }
+}
+
+@media (max-width:42.5em) { /* Media queries which take place until the screen is 42.5em or larger */
+
+  body.mobile-shown {
+    padding:20em 2em 2em 2em; /* Top padding gets reduced if the menu is collapsed */
+  }
+
+  body.mobile-hidden {
+    padding:8em 2em 2em 2em; /* Top padding gets reduced if the menu is collapsed */
+  }
+
+  nav ul li {
+    width:100%; /* With a smaller screen size, navigation items are stacked on top of each other */
+    padding:0.5em 0;
+    border-bottom:0.1em solid #CCC;
+  }
+
+  nav ul li:last-of-type {
+    border-bottom-style:none;
+    padding:0.5em 0 0 0;
+  }
+
+  .img-navbar { /* The logo must float to the left so that the menu can appear next to it */
+    margin-left:1em;
+    float:left;
+  }
+}
+
+@media (min-width:42.51em) { /* Media queries which take place once the screen is 42.51em or larger */
+
+  body {
+    padding:12em 2em 2em 2em; /* Top padding gets reduced as the screen size increases */
+  }
+
+  .homepage-content { /* Increase the padding if the screen is larger */
+    padding:15em 2em 10em 2em;
+  }
+}
+
+@media (min-width:45.625em) { /* Media queries which take place once the screen is 45.625em or larger */
+
+  .img-product-view { /* Product view item image appears smaller and off to the left when the screen is larger */
+    width:30%;
+    float:left;
+    margin-right:2em;
+    height:auto;
+  }
+}
+
+@media (min-width:50em) { /* Media queries which take place once the screen is 50em or larger */
+
+  .grid-container { /* Regular grids used for layout grids (flexbox reserved for other kinds of scaling info) */
+    margin-left:-1em;
+    margin-right:-1em;
+  }
+
+  .col-1of3 {
+    width:33.33%; /* At a certain screen size, make the columns 33% and 66% */
+  }
+
+  .col-2of3 {
+    width:66.66%;
+  }
+
+  .col-1of2 {
+    width:50%;
+  }
+
+  [class*='col-'] { /* Remove outside margins */
+    padding:0 1em;
+    float:left;
+  }
+
+  .more-below-small {
+    border-bottom: 0;
+    margin-bottom: 0;
+    padding-bottom: 0;
+  }
+}
+
+@media (min-width:56.25em) { /* Media queries which take place once the screen is 56.25em or larger */
+
+  body {
+    padding:8em 2em 2em 2em; /* Top padding gets reduced as the screen size increases */
+  }
+ 
+  h1 { /* Heading 1 size changes with screen size */
+    font-size: 3rem;
+  }
+ 
+  p.author { /* Subheading size changes with screen size */
+    font-size: 1.5rem;
+  }
+
+  nav.fixed-nav-bar {
+    position:fixed; /* When the screen is big enough, lock the navbar to the top of the window */
+    height:4em;
+  }
+
+  .img-navbar { /* With a larger screen, have the logo off to the left and float the navigation to the right */
+    max-height:100%;
+    padding:1em 0 1em 2em;
+    display:inline-block;
+    float:left;
+  }
+
+  nav ul { /* Send the navigation to the right when the screen increases in size */
+    display:block;
+    text-align:right;
+  }
 }
